fix rule list text wrapping

--- a/css/includes/components/_process-chart.scss
+++ b/css/includes/components/_process-chart.scss
@@ -92,7 +92,7 @@
         .text-muted {
             font-size: 0.9em;
             font-style: italic;
-            text-wrap: auto;
+            text-wrap: wrap;
             margin: 0.3em 0;
         }
 
